@@ -1,5 +1,5 @@
 <h4 class="ws-title">Customers</h4>
-<search-bar class="d-inline-block mr-2 mb-3" [placeholder]="'Search ID, Name...'" [searchAttributes]="['name', 'id']" [items]="allCustomers" [searchKeyword]="searchController.searchKeyword"></search-bar>
+<search-bar class="d-inline-block mr-2 mb-3" [placeholder]="'Search ID, Name...'" [searchKeyword]="searchController.searchKeyword"></search-bar>
 <button class="btn btn-sm btn-controller float-right" (click)="openModifyCustomerModal()">
     <span class="fas fa-plus mr-2 d-inline-block"></span>Add New
 </button>
