@@ -1,5 +1,5 @@
 <h4 class="ws-title">Promotions</h4>
-<search-bar class="d-inline-block mr-2 mb-3" [placeholder]="'Search title...'" [searchAttributes]="['title']" [items]="allPromotions" [searchKeyword]="searchController.searchKeyword"></search-bar>
+<search-bar class="d-inline-block mr-2 mb-3" [placeholder]="'Search title...'" [searchKeyword]="searchController.searchKeyword"></search-bar>
 <button class="btn btn-sm btn-controller float-right" (click)="openModifyPromotionModal()">
     <span class="fas fa-plus mr-2 d-inline-block"></span>Add New
 </button>
