@@ -4,6 +4,11 @@
 
 - v1.0.1060                                 -
 ---------------------------------------------
+- 2020-12-29                                -
+---------------------------------------------
+.: WSM: Task: Disable button when start invoice module (WSM-256)
+
+---------------------------------------------
 - 2020-12-27                                -
 ---------------------------------------------
 .: WSM: Task: Style the font weight and adjust invoice size (WSM-250)
